<resources>
    <string name="app_name">Beverage-Rater</string>
    <string name="list_beverage_img_description">Image of beverage</string>
    <string name="add_beverage_button_text">Add new beverage</string>
    <string name="add_beverage_barcode_scanner_img_description">Barcode scanner image</string>
    <string name="auth_login_btn_text">Sign in</string>
    <string name="auth_signup_button_text">Sign up</string>
    <string name="appbar_action_signOut">Sign out</string>
    <string name="company_label">Company:</string>
    <string name="info_label">Info:</string>
    <string name="product_name_hint">product name</string>
    <string name="company_name_hint">company name</string>
    <string name="beverage_info_hint">info about the beverage…</string>
    <string name="send_request">Send</string>
    <string name="save">Save</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="delete">Delete</string>
    <string name="search_hint">Search beverages</string>
    <string name="detailImageContentDesc">Image for showing selected beverage</string>
    <string name="detailsName">Name:</string>
    <string name="detailsCompany">Company:</string>
    <string name="detailsDescription">Description:</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="profile_email">Email:</string>
    <string name="profile_ratings_given">Ratings given:</string>
    <string name="profile_beverages_approved">Beverages approved:</string>
    <string name="detailsBack">Back</string>
    <string name="detailsUpdateRating">Update Rating</string>
    <string name="updateRatingText">rated</string>
    <string name="beverage_detail_rating_text">Rate Beverage:</string>
    <string name="notification_content_title">Beverage-request resolved</string>
    <string name="notification_default_content_title">No new updates…</string>
    <string name="notification_request_resolved_content_text">One of your requests was resolved by a moderator.</string>
    <string name="ean_number">EAN-number</string>
    <string name="default_request_name_new_request">New request</string>


    <!--TOAST Messages-->
    <string name="auth_email_password_required">Please fill out both email and password</string>
    <string name="auth_failed_with_msg">Authentication failed with message</string>
    <string name="new_draft_added">New draft added</string>
    <string name="request_was_saved">Request was saved!</string>
    <string name="request_was_sent">Request was sent!</string>
    <string name="request_was_deleted">Request was deleted!</string>
    <string name="request_couldnt_be_saved">Request couldn\'t be saved</string>
    <string name="request_couldnt_be_sent">Request couldn\'t be sent</string>
    <string name="request_couldnt_be_deleted">Request couldn\'t be deleted</string>
    <string name="request_error_has_to_be_draft">Request has to be a draft</string>
    <string name="request_error_has_to_be_draft_or_declined">Request has to be draft or declined</string>
    <string name="request_error_fields_missing">Required fields missing</string>



</resources>