<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/requestDetailsUserConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RequestDetailsUserFragment">

    <Button
        android:id="@+id/requestDetailsUserSaveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/save"
        android:textSize="12sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="@+id/requestDetailsUserCompanyName"
        app:layout_constraintStart_toEndOf="@+id/requestDetailsUserInfoTxt"
        app:layout_constraintTop_toTopOf="@+id/requestDetailsUserInfoTxt" />

    <ImageView
        android:id="@+id/requestDetailsUserBeverageImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/requestDetailsUserBeverageName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="product name"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/requestDetailsUserBeverageImg"
        app:layout_constraintTop_toTopOf="@+id/requestDetailsUserBeverageImg" />

    <EditText
        android:id="@+id/requestDetailsUserCompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="company name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/requestDetailsUserCompanyLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/requestDetailsUserCompanyLabel"
        app:layout_constraintTop_toTopOf="@+id/requestDetailsUserCompanyLabel" />

    <TextView
        android:id="@+id/requestDetailsUserCompanyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/company_label"
        app:layout_constraintStart_toStartOf="@+id/requestDetailsUserBeverageName"
        app:layout_constraintTop_toBottomOf="@+id/requestDetailsUserBeverageName" />

    <TextView
        android:id="@+id/requestDetailsUserBeverageInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/info_label"
        app:layout_constraintStart_toStartOf="@+id/requestDetailsUserBeverageImg"
        app:layout_constraintTop_toBottomOf="@+id/requestDetailsUserBeverageImg" />

    <EditText
        android:id="@+id/requestDetailsUserInfoTxt"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="info about the beverage ..."
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/requestDetailsUserBeverageInfoLabel"
        app:layout_constraintTop_toBottomOf="@+id/requestDetailsUserBeverageInfoLabel" />

    <Button
        android:id="@+id/requestDetailsUserSaveRequestBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/send_request"
        android:textSize="12sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_send"
        app:layout_constraintEnd_toEndOf="@+id/requestDetailsUserSaveBtn"
        app:layout_constraintStart_toStartOf="@+id/requestDetailsUserSaveBtn"
        app:layout_constraintTop_toBottomOf="@+id/requestDetailsUserSaveBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>